# examples

./: .gitignore  README.md  cli-templates.yaml
.github/: dependabot.yml
nitric-nest/: package.json
v1/apollo-server/: README.md  nitric.aws.yaml  nitric.yaml  package-lock.json  package.json
v1/auth-firebase/: README.md
v1/blender-render/: .gitignore  Pipfile  README.md  blender.Dockerfile  blender.dockerfile  nitric.yaml  pyproject.toml  python.dockerfile
v1/cloudflare-lb/: README.md  nitric.prod-aws.yaml  nitric.prod-gcp.yaml  nitric.yaml  package.json
v1/cockroach-example/: README.md
v1/csharp-starter/: .gitignore  README.md  dotnet.dockerfile.dockerignore  nitric.yaml
v1/custom-dockerfile-nestjs/: package.json
v1/dart-starter/: .gitignore  README.md  dart.dockerfile.dockerignore  nitric.yaml  pubspec.yaml
v1/dotnet-starter/: csharp-starter.sln  dotnet.dockerfile  nitric.yaml
v1/dynamic-load/: README.md
v1/flutter/: README.md  nitric-spec.json  nitric.dev.yaml  nitric.yaml  pubspec.yaml
v1/go-starter/: README.md  go.mod  go.sum  nitric.aws.yaml  nitric.yaml
v1/golang-starter/: go.mod
v1/javascript-starter/: README.md  nitric.yaml  node.dockerfile  package.json
v1/llama-rag/: .gitignore  build_query_engine.py  nitric.yaml  pyproject.toml  python.dockerfile
v1/llama-rag/common/: model.py  model_parameters.py  resources.py
v1/llama-rag/services/: api.py
v1/middleware-demo/: README.md
v1/multi-language/: README.md  nitric.yaml
v1/neon/: README.md
v1/neon-tasklist/: README.md
v1/nitric-drizzle/: .env.template  README.md  db.ts  drizzle.config.ts  migrate.dockerfile  nitric.aws-staging.yaml  nitric.staging-aws.yaml  nitric.yaml  package.json
v1/nitric-express/: README.md  package.json
v1/nitric-fastify/: README.md  package.json
v1/nitric-hono/: README.md  package.json
v1/nitric-koa/: README.md  package.json
v1/nitric-meme-generator/: .gitignore  README.md  (+3 more)
v1/podcast-transcription/: .gitignore  README.md  download_model.py  nitric.dev.yaml  nitric.yaml  pyproject.toml  python.dockerfile.dockerignore  transcribe.dockerfile  transcribe.dockerignore
v1/podcast-transcription/batches/: transcribe.py
v1/podcast-transcription/common/: resources.py
v1/podcast-transcription/services/: api.py
v1/python-prediction/: .gitignore  Pipfile  clean_data.txt  data.txt  nitric.yaml  pyproject.toml  python.dockerfile
v1/python-prediction/prediction/: preprocess.py  training.py
v1/python-prediction/services/: prediction.py
v1/scheduled-report/python/: .env  .gitignore  Pipfile  nitric.yaml  pyproject.toml
v1/scheduled-report/python/services/: hello.py
v1/serverless-llama/: .gitignore  README.md  nitric.dev.yaml  nitric.yaml  pyproject.toml  python.dockerfile
v1/serverless-llama/services/: api.py
(+256 files in other folders)
