
[project]
name = "python-prediction"
version = "0.1.0"
description = "Make text predictions with Nitric and Tensorflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nitric ==1.2.3",
  "betterproto ==2.0.0b6",
  "numpy>=1.26.4",
  "num2words>=0.5.14",
  "keras>=2.15.0",
  "scikit-learn>=1.6.0",
  "pandas>=2.2.3",
  "tensorflow==2.15.1",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
